--- a/index.html
+++ b/index.html
@@ -4,10 +4,7 @@
   <meta charset="UTF-8">
   <title>Attendance Calculator</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-  >
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
     body {
       background-color: #121212;
@@ -26,8 +23,8 @@
       max-width: 450px;
     }
     .form-control {
-      background-color: #2b2b2b;
-      color: #fff;
+      /* background-color: #2b2b2b; */
+      color: #2b2b2b;
       border: 1px solid #444;
     }
     .form-control:focus {
@@ -44,6 +41,7 @@
       padding: 15px;
       margin-top: 20px;
       border: 1px solid #444;
+      color: wheat;
     }
   </style>
 </head>
@@ -52,22 +50,22 @@
   <div class="card">
     <h4 class="text-center text-info mb-4">Attendance Calculator</h4>
     
-    <p class="mb-3 text-muted text-center">Enter All the Three Fields:</p>
+    <!-- <p class="mb-3 text-center">Enter All the Three Fields:</p> -->
 
     <form>
       <div class="mb-3">
         <label for="attended" class="form-label text-info">Classes Attended</label>
-        <input type="number" class="form-control" id="attended" placeholder="e.g. 350">
+        <input type="number" class="form-control" id="attended" placeholder="e.g. 33">
       </div>
 
       <div class="mb-3">
         <label for="attended" class="form-label text-info">Duty leave (DL)</label>
-        <input type="number" class="form-control" id="dl" placeholder="e.g. 8">
+        <input type="number" class="form-control" id="dl" placeholder="e.g. 3 (optional)">
       </div>
 
       <div class="mb-3">
         <label for="conducted" class="form-label text-info">Classes Conducted</label>
-        <input type="number" class="form-control" id="conducted" placeholder="e.g. 20">
+        <input type="number" class="form-control" id="conducted" placeholder="e.g. 45">
       </div>
 
       <!-- <div class="mb-4">
@@ -76,16 +74,16 @@
       </div> -->
 
       <div class="d-flex justify-content-between">
-        <button type="button" class="btn btn-primary w-50 me-2">CALCULATE</button>
-        <button type="reset" class="btn btn-primary w-50">RESET</button>
+        <button type="button" class="btn btn-primary w-50 me-2" onclick="calculate()">CALCULATE</button>
+        <button type="reset" class="btn btn-primary w-50" onclick="reset()">RESET</button>
       </div>
     </form>
 
-    <div class="result-box mt-4">
-      <p>Your attendance percentage is <strong>87.50%</strong></p>
-      <p>You may bunk <strong>66</strong> Classes!</p>
+    <div class="result-box mt-4" id="result">
+      <p>Your attendance percentage is <strong id="attendance">80.00%</strong></p>
+      <!-- <p>You may bunk <strong>66</strong> Classes!</p> -->
     </div>
   </div>
-
+  <script src="script.js"></script>
 </body>
 </html>
