--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       background-color: #1e1e1e;
       border-radius: 12px;
       padding: 30px;
+      padding-bottom: 5px !important;
       box-shadow: 0 0 20px rgba(0,0,0,0.5);
       width: 100%;
       max-width: 450px;
@@ -83,6 +84,7 @@
       <p>Your attendance percentage is <strong id="attendance">80.00%</strong></p>
       <!-- <p>You may bunk <strong>66</strong> Classes!</p> -->
     </div>
+    <p style="text-align:center; color:#FF4B91;" class="mt-3">Made with ❤️ by <span style="color:#0984E3;">Gulzar Alice</span>
   </div>
   <script src="script.js"></script>
 </body>
